add contact page

--- a/src/client/FoodyApp/Foody.Admin/AppShell.xaml
+++ b/src/client/FoodyApp/Foody.Admin/AppShell.xaml
@@ -44,6 +44,10 @@
             <ShellContent Title="Category" Icon="{x:Static icons:Icons.Categories}"
                           ContentTemplate="{DataTemplate pages:Category.CategoryPage}"/>
         </Tab>
+
+        <ShellContent Title="Messages"
+                      Icon="{Static icons:Icons.Inbox}"
+                      ContentTemplate="{DataTemplate pages:Contact.ContactPage}"/>
     </FlyoutItem>
 
     <!--<MenuItem Text="Log Out"
